--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "raw-loader": "^4.0.1",
     "rimraf": "^3.0.2",
     "ts-loader": "^7.0.2",
     "typescript": "^3.8.3",
